# FISV

./: .gitignore
CBG/: CBGControl.cpp  CMakeLists.txt  CmdLineParser.cpp  CmdLineParser.hpp
CameraCalibration/: CMakeLists.txt
CameraCalibration/src/: augReal.cpp  calibrate.cpp
Foreground Higlighting/: CMakeLists.txt  foregroundBasic.cpp  foregroundRectangle.cpp
ForegroundHighlighting/: CMakeLists.txt  foregroundPolygon.cpp  foregroundRectangle.cpp
ImageEqualization/: CMakeLists.txt  histogramEqualization.cpp
LBP/: CMakeLists.txt
LBP/src/: lbp.cpp  main.cpp
PedestrianDetection/include/: lbp.hpp
PedestrianDetection/src/: CMakeLists.txt  common_code.cpp  lbp.cpp  traintest.cpp
Sharpen/: convolve.cpp  laplacian.cpp
Sharpen/src/: CMakeLists.txt  CmdLineParser.hpp  convolve.cpp  convolve.hpp  diffGaussians.cpp  diffGaussians.hpp  laplacian.cpp  laplacian.hpp  sharpen.cpp
